--- a/transformer/package.json
+++ b/transformer/package.json
@@ -11,5 +11,15 @@
   "license": "ISC",
   "dependencies": {
     "papaparse": "^5.0.0"
+  },
+  "devDependencies": {
+    "husky": "^2.4.1",
+    "prettier": "^1.18.2",
+    "pretty-quick": "^1.11.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   }
 }
