--- a/transformer/package.json
+++ b/transformer/package.json
@@ -13,6 +13,9 @@
     "papaparse": "^5.0.0"
   },
   "devDependencies": {
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^4.3.0",
     "husky": "^2.4.1",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.0"
